<resources>
    <string name="app_name">Meet n Keep</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="input">Input</string>
    <string name="button_1">Load Contact </string>
    <string name="button_2">Button 2 </string>
    <string name="button_3">Button 3 </string>
    <string name="button_4">View Contact </string>
    <string name="bottom_nav_menu_button_1">Contacts</string>
    <string name="bottom_nav_menu_button_2">Meetings</string>
    <string name="bottom_nav_menu_button_3">Search</string>
    <string name="view_contacts_list_page_title">Contacts</string>
    <string name="view_meetings_page_title">Meetings</string>
    <string name="add_new_contact_page_title">Add New Contact</string>
    <string name="add_new_meeting_page_title">Add New Meeting</string>
    <string name="meetings_create_meeting_button">New Meeting</string>
    <string name="meetings_open_calendar_button">View Calendar</string>
    <string name="top_bar_search">Search</string>
    <string name="top_bar_content_description_search">Search for a contact</string>
    <string name="login_email_text_hint">Email</string>
    <string name="login_password_text_hint">Password</string>
    <string name="login_enter_button_text">Log in</string>
    <string name="new_contact_name_text">Name</string>
    <string name="new_contact_mobile_text">Mobile</string>
    <string name="new_contact_email_text">Email</string>
    <string name="new_contact_notes_text">Notes</string>
    <string name="add_new_contact_button_text">Save</string>
    <string name="edit_contact_button_text">Save Edit</string>
    <string name="new_meeting_contact_text">Contact Email</string>
    <string name="view_contact_create_new_contact">New</string>
    <string name="new_meeting_name_text">Meeting title</string>
    <string name="new_meeting_date_text">Date</string>
    <string name="new_meeting_time_text">Time</string>
    <string name="new_meeting_location_text">Location</string>
    <string name="new_meeting_notes_text">Notes</string>
    <string name="add_new_meeting_button_text">Save</string>
    <string name="view_meetings_list_item_contact_name_default_text">Drake</string>
    <string name="view_meetings_list_item_meeting_date_default_text">August 22</string>
    <string name="view_meetings_list_item_meeting_location_default_text">The Recording Studio, Los Angeles</string>
    <string name="view_meetings_list_item_meeting_name_default_text">Recording Session</string>
    <string name="view_meetings_list_item_meeting_time_default_text">1&#8221;3pm</string>
    <string name="view_meetings_list_item_overflow_buttons_content_description">Overflow button</string>
    <string name="view_contact_send_email_button_txt">Send Email</string>
    <string name="view_contact_create_meeting_button_txt">Create Meeting</string>
    <string name="fetch_events">Fetch Events</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--    Auth stuff-->
    <string name="server_client_id">818199992145-o2ou71974ptrfom44ae4v6s9g451cacf.apps.googleusercontent.com</string>
    <!--    Login Stuff-->
    <string name="preference_file_key">cloud_surfers</string>
    <!--    Search-->
    <string name="search_hint">Search</string>
    <string name="search_chip_default_text">Search chip</string>
    <string name="search_view_no_data_text">No contacts were found</string>

    <string name="chip_hint">Add Tags</string>
    <string name="chip_label_text">Tags</string>

    <string name="view_contact_upcoming_meeting_label_text">Upcoming meetings</string>
    <string name="view_contact_upcoming_meeting_label_no_meetings">No upcoming meetings.</string>

    <string name="add_contact_save_button_text">Save</string>
    <string name="delete_contact_button_text">Delete</string>


    <string name="view_contact_delete_contact_button_text">Delete</string>

    <string name="login_button_text">Sign-in with Google</string>


</resources>