<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_height="@dimen/view_meetings_list_item_height"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/view_meetings_list_item_contact_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/view_meetings_list_item_contact_name_default_text"
        style="@style/MeetingsListItemsText"/>

    <TextView
        android:id="@+id/view_meetings_list_item_meeting_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:gravity="center"
        android:text="@string/view_meetings_list_item_meeting_name_default_text"
        style="@style/MeetingsListItemsText"/>

    <TextView
        android:id="@+id/view_meetings_list_item_meeting_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/view_meetings_list_item_meeting_time_default_text"
        style="@style/MeetingsListItemsText"/>

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        app:tint="@color/light_white"
        style="?android:attr/actionOverflowButtonStyle"
        />


</LinearLayout>