<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        tools:ignore="MissingConstraints"
        android:id="@+id/dummy_focus_view_view_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">
    <requestFocus/>
    </TextView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/view_meeting_outlinedTextFieldMeetingContact"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"

        android:hint="@string/new_meeting_contact_text"
        android:textColorHint="@color/light_white"
        app:boxStrokeColor="@color/light_white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBarLayout"

        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="@color/light_white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/view_meeting_outlinedTextFieldMeetingName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"

        android:hint="@string/new_meeting_name_text"
        android:textColorHint="@color/light_white"
        app:boxStrokeColor="@color/light_white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_meeting_outlinedTextFieldMeetingContact"

        app:startIconDrawable="@drawable/ic_baseline_local_offer_24"
        app:startIconTint="@color/light_white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/view_meeting_outlinedTextFieldMeetingDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"

        android:hint="@string/new_meeting_date_text"
        android:textColorHint="@color/light_white"
        app:boxStrokeColor="@color/light_white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_meeting_outlinedTextFieldMeetingName"

        app:startIconDrawable="@drawable/ic_baseline_access_time_24"
        app:startIconTint="@color/light_white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/view_meeting_outlinedTextFieldMeetingTime"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"

        android:hint="@string/new_meeting_time_text"
        android:textColorHint="@color/light_white"
        app:boxStrokeColor="@color/light_white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_meeting_outlinedTextFieldMeetingDate"

        app:startIconDrawable="@drawable/ic_baseline_access_time_24"
        app:startIconTint="@color/light_white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/view_meeting_outlinedTextFieldMeetingLocation"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"

        android:hint="@string/new_meeting_location_text"
        android:textColorHint="@color/light_white"
        app:boxStrokeColor="@color/light_white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_meeting_outlinedTextFieldMeetingTime"

        app:startIconDrawable="@drawable/ic_baseline_location_on_24"
        app:startIconTint="@color/light_white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/view_meeting_outlinedTextFieldMeetingNotes"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"

        android:hint="@string/new_meeting_notes_text"
        android:textColorHint="@color/light_white"
        app:boxStrokeColor="@color/light_white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_meeting_outlinedTextFieldMeetingLocation"

        app:startIconDrawable="@drawable/ic_baseline_notes_24"
        app:startIconTint="@color/light_white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/view_meeting_edit_meeting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_contact_button_text"
        app:icon="@android:drawable/ic_menu_edit"
        app:layout_constraintEnd_toEndOf="@+id/view_meeting_outlinedTextFieldMeetingNotes"
        app:layout_constraintTop_toBottomOf="@+id/view_meeting_outlinedTextFieldMeetingNotes" />

    <Button
        android:id="@+id/view_meeting_delete_meeting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete_contact_button_text"
        app:layout_constraintStart_toStartOf="@+id/view_meeting_outlinedTextFieldMeetingNotes"
        app:layout_constraintTop_toBottomOf="@+id/view_meeting_outlinedTextFieldMeetingNotes" />

</androidx.constraintlayout.widget.ConstraintLayout>
