<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/viewContactOutlinedTextFieldName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"

        android:hint="@string/new_contact_name_text"
        android:textColorHint="@color/light_white"
        app:boxStrokeColor="@color/light_white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="@color/light_white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/view_contact_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/viewContactOutlinedTextFieldMobile"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"

        android:hint="@string/new_contact_mobile_text"
        android:textColorHint="@color/light_white"
        app:boxStrokeColor="@color/light_white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewContactOutlinedTextFieldName"

        app:startIconDrawable="@drawable/ic_baseline_phone_24"
        app:startIconTint="@color/light_white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/view_contact_mobile_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/viewContactOutlinedTextFieldEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"

        android:hint="@string/new_contact_email_text"
        android:textColorHint="@color/light_white"
        app:boxStrokeColor="@color/light_white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewContactOutlinedTextFieldMobile"

        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/light_white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/view_contact_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/viewContactOutlinedTextFieldNotes"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"

        android:hint="@string/new_contact_notes_text"
        android:textColorHint="@color/light_white"
        app:boxStrokeColor="@color/light_white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewContactOutlinedTextFieldEmail"

        app:startIconDrawable="@drawable/ic_baseline_notes_24"
        app:startIconTint="@color/light_white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/view_contact_notes_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/view_contact_chip_layout"
        app:layout_constraintTop_toBottomOf="@+id/viewContactOutlinedTextFieldNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/chips_layout_border"
        android:orientation="horizontal">

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/view_contact_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:flexWrap="wrap"
            app:alignItems="stretch"
            app:showDivider="beginning|middle|end"
            app:dividerDrawable="@drawable/divider">

            <EditText
                android:id="@+id/view_contact_chip_edit_text"
                android:hint="@string/chip_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColorHint="@color/light_white"
                android:background="@android:color/transparent"
                android:imeOptions="actionDone"
                android:inputType="text"/>

        </com.google.android.flexbox.FlexboxLayout>

    </LinearLayout>

    <Button
        android:id="@+id/view_contact_send_email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/view_contact_send_email_button_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_contact_chip_layout" />

    <Button
        android:id="@+id/view_contact_create_meeting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/view_contact_create_meeting_button_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_contact_chip_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>
