<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/TopAppBarStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar_no_search"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/view_meetings_page_title" />

    </com.google.android.material.appbar.AppBarLayout>


    <Button
        android:id="@+id/addMeetingButton"
        style="@style/MeetingsButtons"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/meetings_create_meeting_button"
        app:cornerRadius="30dp"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        style="@style/MeetingsButtons"

        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/meetings_open_calendar_button"
        app:cornerRadius="30dp"
        app:icon="@drawable/ic_baseline_calendar_today_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></Button>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/view_meetings_list_recycler_view"
        android:layout_width="409dp"
        android:layout_height="544dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/addMeetingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.0">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>
